--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "npm-run-all -p -l start:*",
-    "start:server": "cd server && node server.js",
+    "start:server": "cd server && yarn start",
     "start:client": "cd client && yarn start",
     "install:client": "cd client && npm install",
     "install:server": "cd server && npm install",
