--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "cors": "2.8.5",
-    "express": "4.17.0"
+    "express": "4.17.0",
+    "mongoose": "5.5.11",
+    "nodemon": "1.19.1"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
