--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.17.0",
+    "helmet": "3.18.0",
     "mongoose": "5.5.11",
     "nodemon": "1.19.1"
   },
