--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "express": "4.17.0",
     "helmet": "3.18.0",
     "mongoose": "5.5.11",
-    "nodemon": "1.19.1"
+    "nodemon": "1.19.1",
+    "uuid": "3.3.2"
   },
   "scripts": {
     "start": "nodemon server.js"
